# SO-100-arm-ros2-foxy-Unitree-Go2-ubuntu20.04

./: .gitignore  ACKNOWLEDGMENTS.md  DISCLAIMER.md  README.md
SO-100-arm/: README.md
SO-100-arm/so_arm_100_bringup/: package.xml
SO-100-arm/so_arm_100_bringup/launch/: gz.launch.py
SO-100-arm/so_arm_100_description/: package.xml
SO-100-arm/so_arm_100_description/hooks/: so_arm_100_description.sh.in
SO-100-arm/so_arm_100_description/launch/: joint_state_pub_gui.launch.py
SO-100-arm/so_arm_100_moveit_config/: .setup_assistant
SO-100-arm/so_arm_100_moveit_config/config/: so_arm_100.ros2_control.xacro  so_arm_100.urdf.xacro
SO-100-arm/so_arm_100_moveit_config/launch/: spawn_controllers.launch.py
follower_arm_driver/: package.xml  setup.cfg  setup.py
follower_arm_driver/follower_arm_driver/: arm_bridge.py
go2_state_bridge/: package.xml  setup.cfg  setup.py
scripts/: arm_movement.py
so_arm_100_bringup/: setup.py
so_arm_100_bringup/config/: ros_gz_bridge.yaml
so_arm_100_bringup/launch/: gz.launch.py
so_arm_100_bringup/so_arm_100_bringup/: so_arm_100_5dof_cmd_relay.py
so_arm_100_description/: CMakeLists.txt
so_arm_100_description/ros2_control/: so_arm_100_5dof_position.ros2_control.xacro
so_arm_100_description/urdf/: so_arm_100_5dof.urdf.xacro
so_arm_100_foxy_bringup/: package.xml  setup.cfg  setup.py
so_arm_100_hardware/config/: hardware_config.yaml
so_arm_100_hardware/include/so_arm_100_hardware/: so_arm_100_interface.hpp
so_arm_100_hardware/src/: so_arm_100_interface.cpp
so_arm_100_moveit_config/: package.xml
so_arm_100_moveit_config/config/: so_arm_100.urdf.xacro
src/SO-100-arm/so_arm_100/: package.xml
src/SO-100-arm/so_arm_100_description/: CMakeLists.txt
src/SO-100-arm/so_arm_100_moveit_config/: package.xml
src/follower_arm_driver/follower_arm_driver/: .arm_bridge.py.swp
src/go2_state_bridge/go2_state_bridge/: state_bridge.py
src/so_arm_100_foxy_bringup/config/: ros2_controllers.yaml
src/so_arm_100_foxy_bringup/launch/: hardware_foxy.launch.py
src/so_arm_100_hardware/: CMakeLists.txt  README.md  package.xml
src/so_arm_100_hardware/config/: calibration.yaml
(+11 files in other folders)
